bindings/c/include/proven.h


typedef enum {
    PROVEN_OK                      =   0,
    PROVEN_ERR_NULL_POINTER        =  -1,
    PROVEN_ERR_INVALID_ARGUMENT    =  -2,
    PROVEN_ERR_OVERFLOW            =  -3,
    PROVEN_ERR_UNDERFLOW           =  -4,
    PROVEN_ERR_DIVISION_BY_ZERO    =  -5,
    PROVEN_ERR_PARSE_FAILURE       =  -6,
    PROVEN_ERR_VALIDATION_FAILED   =  -7,
    PROVEN_ERR_OUT_OF_BOUNDS       =  -8,
    PROVEN_ERR_ENCODING_ERROR      =  -9,
    PROVEN_ERR_ALLOCATION_FAILED   = -10,
    PROVEN_ERR_NOT_IMPLEMENTED     = -99
} ProvenStatus;
typedef struct { int32_t status; int64_t value; } ProvenIntResult;
typedef struct { int32_t status; bool value; } ProvenBoolResult;
typedef struct { int32_t status; char* value; size_t length; } ProvenStringResult;
typedef struct { int32_t status; double value; } ProvenFloatResult;
void proven_free_string(char* ptr);
int32_t proven_init(void);
void proven_deinit(void);
bool proven_is_initialized(void);
uint32_t proven_ffi_abi_version(void);
uint32_t proven_version_major(void);
uint32_t proven_version_minor(void);
uint32_t proven_version_patch(void);
uint32_t proven_module_count(void);
ProvenIntResult proven_math_div(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_mod(int64_t numerator, int64_t denominator);
ProvenIntResult proven_math_add_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_sub_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_mul_checked(int64_t a, int64_t b);
ProvenIntResult proven_math_abs_safe(int64_t n);
int64_t proven_math_clamp(int64_t lo, int64_t hi, int64_t value);
ProvenIntResult proven_math_pow_checked(int64_t base, uint32_t exp);
ProvenBoolResult proven_string_is_valid_utf8(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_sql(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_html(const uint8_t* ptr, size_t len);
ProvenStringResult proven_string_escape_js(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_path_has_traversal(const uint8_t* ptr, size_t len);
ProvenStringResult proven_path_sanitize_filename(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_crypto_constant_time_eq(
    const uint8_t* ptr1, size_t len1,
    const uint8_t* ptr2, size_t len2
);
ProvenStatus proven_crypto_random_bytes(uint8_t* ptr, size_t len);
typedef struct {
    char*    scheme;       size_t scheme_len;
    char*    host;         size_t host_len;
    uint16_t port;         bool   has_port;
    char*    path;         size_t path_len;
    char*    query;        size_t query_len;
    char*    fragment;     size_t fragment_len;
} ProvenUrlComponents;
typedef struct {
    int32_t             status;
    ProvenUrlComponents components;
} ProvenUrlResult;
ProvenUrlResult proven_url_parse(const uint8_t* ptr, size_t len);
void proven_url_free(ProvenUrlComponents* components);
ProvenBoolResult proven_email_is_valid(const uint8_t* ptr, size_t len);
typedef struct { uint8_t octets[4]; } ProvenIPv4Address;
typedef struct {
    int32_t          status;
    ProvenIPv4Address address;
} ProvenIPv4Result;
ProvenIPv4Result proven_network_parse_ipv4(const uint8_t* ptr, size_t len);
bool proven_network_ipv4_is_private(ProvenIPv4Address addr);
bool proven_network_ipv4_is_loopback(ProvenIPv4Address addr);
ProvenBoolResult proven_header_has_crlf(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_header_is_valid_name(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_header_is_dangerous(const uint8_t* ptr, size_t len);
ProvenStringResult proven_header_render(
    const uint8_t* name_ptr, size_t name_len,
    const uint8_t* value_ptr, size_t value_len
);
ProvenStringResult proven_header_build_csp(const uint8_t* directives_json, size_t json_len);
ProvenStringResult proven_header_build_hsts(int64_t max_age, bool include_subdomains, bool preload);
typedef struct {
    const uint8_t* domain;       size_t domain_len;
    const uint8_t* path;         size_t path_len;
    int64_t        max_age;      
    bool           secure;
    bool           http_only;
    ProvenSameSite same_site;
    bool           partitioned;
} ProvenCookieAttributes;
ProvenBoolResult proven_cookie_has_injection(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_cookie_validate_name(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_cookie_validate_value(const uint8_t* ptr, size_t len);
ProvenIntResult proven_cookie_get_prefix(const uint8_t* ptr, size_t len);
ProvenStringResult proven_cookie_build_set_cookie(
    const uint8_t* name_ptr, size_t name_len,
    const uint8_t* value_ptr, size_t value_len,
    ProvenCookieAttributes attrs
);
ProvenStringResult proven_cookie_build_delete(const uint8_t* name_ptr, size_t name_len);
typedef enum {
    PROVEN_CHARSET_UTF8        = 0,
    PROVEN_CHARSET_UTF16LE     = 1,
    PROVEN_CHARSET_UTF16BE     = 2,
    PROVEN_CHARSET_ISO8859_1   = 3,
    PROVEN_CHARSET_ASCII       = 4,
    PROVEN_CHARSET_WINDOWS1252 = 5,
    PROVEN_CHARSET_OTHER       = 6
} ProvenCharset;
typedef struct {
    int32_t            status;
    char*              media_type;     size_t media_type_len;
    char*              subtype;        size_t subtype_len;
    char*              suffix;         size_t suffix_len;
    ProvenMediaCategory category;
    ProvenCharset       charset;
    bool                has_charset;
} ProvenContentTypeResult;
ProvenContentTypeResult proven_content_type_parse(const uint8_t* ptr, size_t len);
void proven_content_type_free(ProvenContentTypeResult* result);
ProvenBoolResult proven_content_type_can_sniff_dangerous(const uint8_t* ptr, size_t len);
ProvenStringResult proven_content_type_render(
    const uint8_t* type_ptr, size_t type_len,
    const uint8_t* subtype_ptr, size_t subtype_len,
    const uint8_t* suffix_ptr, size_t suffix_len,
    ProvenCharset charset, bool has_charset
);
ProvenBoolResult proven_content_type_is_json(
    const uint8_t* subtype_ptr, size_t subtype_len,
    const uint8_t* suffix_ptr, size_t suffix_len
);
ProvenBoolResult proven_content_type_is_xml(
    const uint8_t* subtype_ptr, size_t subtype_len,
    const uint8_t* suffix_ptr, size_t suffix_len
);
typedef struct { uint8_t bytes[16]; } ProvenUUID;
typedef struct { int32_t status; ProvenUUID uuid; } ProvenUUIDResult;
ProvenUUIDResult proven_uuid_v4(void);
ProvenStringResult proven_uuid_to_string(ProvenUUID uuid);
ProvenUUIDResult proven_uuid_parse(const uint8_t* ptr, size_t len);
bool proven_uuid_is_nil(ProvenUUID uuid);
uint8_t proven_uuid_version(ProvenUUID uuid);
typedef enum {
    PROVEN_JSON_NULL    =  0,
    PROVEN_JSON_BOOL    =  1,
    PROVEN_JSON_NUMBER  =  2,
    PROVEN_JSON_STRING  =  3,
    PROVEN_JSON_ARRAY   =  4,
    PROVEN_JSON_OBJECT  =  5,
    PROVEN_JSON_INVALID = -1
} ProvenJsonType;
ProvenBoolResult proven_json_is_valid(const uint8_t* ptr, size_t len);
ProvenJsonType proven_json_get_type(const uint8_t* ptr, size_t len);
typedef struct {
    int32_t  year;
    uint8_t  month;              
    uint8_t  day;                
    uint8_t  hour;               
    uint8_t  minute;             
    uint8_t  second;             
    uint32_t nanosecond;
    int16_t  tz_offset_minutes;  
} ProvenDateTime;
typedef struct {
    int32_t       status;
    ProvenDateTime datetime;
} ProvenDateTimeResult;
ProvenDateTimeResult proven_datetime_parse(const uint8_t* ptr, size_t len);
ProvenStringResult proven_datetime_format_iso8601(ProvenDateTime dt);
bool proven_datetime_is_leap_year(int32_t year);
uint8_t proven_datetime_days_in_month(int32_t year, uint8_t month);
ProvenFloatResult proven_float_div(double a, double b);
bool proven_float_is_finite(double x);
bool proven_float_is_nan(double x);
ProvenFloatResult proven_float_sqrt(double x);
ProvenFloatResult proven_float_ln(double x);
typedef struct {
    ProvenPasswordStrength strength;
    bool   has_lowercase;
    bool   has_uppercase;
    bool   has_digit;
    bool   has_special;
    size_t length;
} ProvenPasswordResult;
ProvenPasswordResult proven_password_validate(const uint8_t* ptr, size_t len);
bool proven_password_is_common(const uint8_t* ptr, size_t len);
typedef struct {
    int32_t  status;
    uint8_t* data;
    size_t   length;
} ProvenHexDecodeResult;
ProvenStringResult proven_hex_encode(const uint8_t* ptr, size_t len, bool uppercase);
ProvenHexDecodeResult proven_hex_decode(const uint8_t* ptr, size_t len);
void proven_hex_free(ProvenHexDecodeResult* result);
typedef struct {
    int32_t  status;
    int64_t  amount_minor;     
    uint8_t  currency_code[3]; 
    uint8_t  decimal_places;
} ProvenCurrencyResult;
ProvenCurrencyResult proven_currency_parse(const uint8_t* ptr, size_t len);
ProvenStringResult proven_currency_format(int64_t amount_minor, uint8_t code[3], uint8_t decimal_places);
typedef struct {
    int32_t  status;
    uint16_t country_code;
    uint64_t national_number;
    bool     is_valid;
} ProvenPhoneResult;
ProvenPhoneResult proven_phone_parse(const uint8_t* ptr, size_t len);
ProvenStringResult proven_phone_format_e164(uint16_t country_code, uint64_t national_number);
typedef struct {
    uint32_t major;
    uint32_t minor;
    uint32_t patch;
    size_t   prerelease_len;
    char*    prerelease;  
} ProvenSemanticVersion;
typedef struct {
    int32_t              status;
    ProvenSemanticVersion version;
} ProvenVersionResult;
ProvenVersionResult proven_version_parse(const uint8_t* ptr, size_t len);
int32_t proven_version_compare(ProvenSemanticVersion a, ProvenSemanticVersion b);
void proven_version_free(ProvenSemanticVersion* version);
typedef struct {
    double latitude;   
    double longitude;  
} ProvenGeoCoordinate;
typedef struct {
    int32_t            status;
    ProvenGeoCoordinate coordinate;
} ProvenGeoResult;
ProvenGeoResult proven_geo_validate(double lat, double lon);
ProvenFloatResult proven_geo_distance(ProvenGeoCoordinate a, ProvenGeoCoordinate b);
bool proven_geo_in_bounds(
    ProvenGeoCoordinate coord,
    double min_lat, double max_lat,
    double min_lon, double max_lon
);
ProvenIntResult proven_checksum_crc32(const uint8_t* ptr, size_t len);
ProvenBoolResult proven_checksum_verify_crc32(const uint8_t* ptr, size_t len, uint32_t expected);
double proven_probability_create(double value);
double proven_probability_and(double a, double b);
double proven_probability_or_exclusive(double a, double b);
double proven_probability_not(double p);
ProvenFloatResult proven_calculator_eval(const uint8_t* ptr, size_t len);
typedef struct {
    int32_t              status;
    ProvenBoundedBuffer* buffer;
} ProvenBufferResult;
ProvenBufferResult proven_buffer_create(size_t capacity);