bindings/arduino/Proven.h


struct IPv4Address {
    uint8_t octets[4];
    bool valid;
};
struct UUID {
    uint8_t bytes[16];
};
struct DateTime {
    int16_t year;
    uint8_t month;   
    uint8_t day;     
    uint8_t hour;    
    uint8_t minute;  
    uint8_t second;  
    bool valid;
};
struct Version {
    uint16_t major;
    uint16_t minor;
    uint16_t patch;
    bool valid;
};
struct Cookie {
    char name[32];
    char value[128];
    uint32_t maxAge;      
    bool secure;
    bool httpOnly;
    bool sameSiteStrict;
    bool valid;
};
inline const char* version() {
    return PROVEN_VERSION;
}