bindings/rust/src/ffi.rs


// ============================================================================
// Extern "C" function declarations
// ============================================================================

extern "C" {
    // --- Memory management ---

    /// Free a string allocated by libproven.
    pub fn proven_free_string(ptr: *mut u8);

    // --- Lifecycle ---

    /// Initialize the Proven runtime (includes Idris 2 runtime).
    pub fn proven_init() -> i32;

    /// Cleanup the Proven runtime.
    pub fn proven_deinit();

    /// Check if runtime is initialized.
    pub fn proven_is_initialized() -> bool;

    // --- Version info ---

    /// Get major version number.
    pub fn proven_version_major() -> u32;

    /// Get minor version number.
    pub fn proven_version_minor() -> u32;

    /// Get patch version number.
    pub fn proven_version_patch() -> u32;

    /// Get number of modules.
    pub fn proven_module_count() -> u32;

    /// Get FFI ABI version for compatibility checking.
    pub fn proven_ffi_abi_version() -> u32;

    // --- SafeMath (8 functions) ---

    /// Safe division with zero-check.
    pub fn proven_math_div(numerator: i64, denominator: i64) -> IntResult;

    /// Safe modulo with zero-check.
    pub fn proven_math_mod(numerator: i64, denominator: i64) -> IntResult;

    /// Checked addition with overflow detection.
    pub fn proven_math_add_checked(a: i64, b: i64) -> IntResult;

    /// Checked subtraction with underflow detection.
    pub fn proven_math_sub_checked(a: i64, b: i64) -> IntResult;

    /// Checked multiplication with overflow detection.
    pub fn proven_math_mul_checked(a: i64, b: i64) -> IntResult;

    /// Safe absolute value (handles MIN_INT).
    pub fn proven_math_abs_safe(n: i64) -> IntResult;

    /// Clamp value to range [lo, hi].
    pub fn proven_math_clamp(lo: i64, hi: i64, value: i64) -> i64;

    /// Integer power with overflow checking.
    pub fn proven_math_pow_checked(base: i64, exp: u32) -> IntResult;

    // --- SafeString (4 functions) ---

    /// Check if byte sequence is valid UTF-8.
    pub fn proven_string_is_valid_utf8(ptr: *const u8, len: usize) -> BoolResult;

    /// Escape string for SQL.
    pub fn proven_string_escape_sql(ptr: *const u8, len: usize) -> StringResult;

    /// Escape string for HTML.
    pub fn proven_string_escape_html(ptr: *const u8, len: usize) -> StringResult;

    /// Escape string for JavaScript.
    pub fn proven_string_escape_js(ptr: *const u8, len: usize) -> StringResult;

    // --- SafePath (2 functions) ---

    /// Check if path attempts directory traversal.
    pub fn proven_path_has_traversal(ptr: *const u8, len: usize) -> BoolResult;

    /// Sanitize a filename.
    pub fn proven_path_sanitize_filename(ptr: *const u8, len: usize) -> StringResult;

    // --- SafeCrypto (2 functions) ---

    /// Constant-time byte comparison.
    pub fn proven_crypto_constant_time_eq(
        ptr1: *const u8,
        len1: usize,
        ptr2: *const u8,
        len2: usize,
    ) -> BoolResult;

    /// Fill buffer with cryptographically secure random bytes.
    pub fn proven_crypto_random_bytes(ptr: *mut u8, len: usize) -> i32;

    // --- SafeUrl (2 functions) ---

    /// Parse URL into components.
    pub fn proven_url_parse(ptr: *const u8, len: usize) -> UrlResult;

    /// Free URL components.
    pub fn proven_url_free(components: *mut UrlComponents);

    // --- SafeEmail (1 function) ---

    /// Validate email address.
    pub fn proven_email_is_valid(ptr: *const u8, len: usize) -> BoolResult;

    // --- SafeNetwork (3 functions) ---

    /// Parse IPv4 address.
    pub fn proven_network_parse_ipv4(ptr: *const u8, len: usize) -> IPv4Result;

    /// Check if IPv4 is private (RFC 1918).
    pub fn proven_network_ipv4_is_private(addr: IPv4Address) -> bool;

    /// Check if IPv4 is loopback.
    pub fn proven_network_ipv4_is_loopback(addr: IPv4Address) -> bool;

    // --- SafeHeader (6 functions) ---

    /// Check for CRLF injection in header value.
    pub fn proven_header_has_crlf(ptr: *const u8, len: usize) -> BoolResult;

    /// Check if header name is valid per RFC 7230.
    pub fn proven_header_is_valid_name(ptr: *const u8, len: usize) -> BoolResult;

    /// Check if header name is dangerous.
    pub fn proven_header_is_dangerous(ptr: *const u8, len: usize) -> BoolResult;

    /// Create validated header string "Name: Value".
    pub fn proven_header_render(
        name_ptr: *const u8,
        name_len: usize,
        value_ptr: *const u8,
        value_len: usize,
    ) -> StringResult;

    /// Build Content-Security-Policy header value.
    pub fn proven_header_build_csp(
        directives_json: *const u8,
        json_len: usize,
    ) -> StringResult;

    /// Build HSTS header value.
    pub fn proven_header_build_hsts(
        max_age: i64,
        include_subdomains: bool,
        preload: bool,
    ) -> StringResult;

    // --- SafeCookie (6 functions) ---

    /// Check for cookie injection characters.
    pub fn proven_cookie_has_injection(ptr: *const u8, len: usize) -> BoolResult;

    /// Validate cookie name.
    pub fn proven_cookie_validate_name(ptr: *const u8, len: usize) -> BoolResult;

    /// Validate cookie value.
    pub fn proven_cookie_validate_value(ptr: *const u8, len: usize) -> BoolResult;

    /// Get cookie prefix type.
    pub fn proven_cookie_get_prefix(ptr: *const u8, len: usize) -> IntResult;

    /// Build Set-Cookie header value.
    pub fn proven_cookie_build_set_cookie(
        name_ptr: *const u8,
        name_len: usize,
        value_ptr: *const u8,
        value_len: usize,
        attrs: CookieAttributes,
    ) -> StringResult;

    /// Build delete cookie header.
    pub fn proven_cookie_build_delete(name_ptr: *const u8, name_len: usize) -> StringResult;

    // --- SafeContentType (6 functions) ---

    /// Parse Content-Type header.
    pub fn proven_content_type_parse(ptr: *const u8, len: usize) -> ContentTypeResult;

    /// Free content type result.
    pub fn proven_content_type_free(result: *mut ContentTypeResult);

    /// Check if content type can be sniffed to something dangerous.
    pub fn proven_content_type_can_sniff_dangerous(
        ptr: *const u8,
        len: usize,
    ) -> BoolResult;

    /// Render content type to string.
    pub fn proven_content_type_render(
        type_ptr: *const u8,
        type_len: usize,
        subtype_ptr: *const u8,
        subtype_len: usize,
        suffix_ptr: *const u8,
        suffix_len: usize,
        charset: Charset,
        has_charset: bool,
    ) -> StringResult;

    /// Check if content type is JSON.
    pub fn proven_content_type_is_json(
        subtype_ptr: *const u8,
        subtype_len: usize,
        suffix_ptr: *const u8,
        suffix_len: usize,
    ) -> BoolResult;

    /// Check if content type is XML.
    pub fn proven_content_type_is_xml(
        subtype_ptr: *const u8,
        subtype_len: usize,
        suffix_ptr: *const u8,
        suffix_len: usize,
    ) -> BoolResult;

    // --- SafeUUID (5 functions) ---

    /// Generate UUID v4.
    pub fn proven_uuid_v4() -> UUIDResult;

    /// Format UUID as string.
    pub fn proven_uuid_to_string(uuid: UUID) -> StringResult;

    /// Parse UUID from string.
    pub fn proven_uuid_parse(ptr: *const u8, len: usize) -> UUIDResult;

    /// Check if UUID is nil.
    pub fn proven_uuid_is_nil(uuid: UUID) -> bool;

    /// Get UUID version.
    pub fn proven_uuid_version(uuid: UUID) -> u8;

    // --- SafeJson (2 functions) ---

    /// Check if string is valid JSON.
    pub fn proven_json_is_valid(ptr: *const u8, len: usize) -> BoolResult;

    /// Get JSON value type at root level.
    pub fn proven_json_get_type(ptr: *const u8, len: usize) -> JsonType;

    // --- SafeDateTime (4 functions) ---

    /// Parse ISO 8601 date string.
    pub fn proven_datetime_parse(ptr: *const u8, len: usize) -> DateTimeResult;

    /// Format DateTime as ISO 8601.
    pub fn proven_datetime_format_iso8601(dt: DateTime) -> StringResult;

    /// Check if year is leap year.
    pub fn proven_datetime_is_leap_year(year: i32) -> bool;

    /// Get days in month.
    pub fn proven_datetime_days_in_month(year: i32, month: u8) -> u8;

    // --- SafeFloat (5 functions) ---

    /// Safe floating-point division.
    pub fn proven_float_div(a: f64, b: f64) -> FloatResult;

    /// Check if float is finite.
    pub fn proven_float_is_finite(x: f64) -> bool;

    /// Check if float is NaN.
    pub fn proven_float_is_nan(x: f64) -> bool;

    /// Safe square root.
    pub fn proven_float_sqrt(x: f64) -> FloatResult;

    /// Safe natural logarithm.
    pub fn proven_float_ln(x: f64) -> FloatResult;

    // --- SafePassword (2 functions) ---

    /// Validate password strength.
    pub fn proven_password_validate(ptr: *const u8, len: usize) -> PasswordResult;

    /// Check if password is common.
    pub fn proven_password_is_common(ptr: *const u8, len: usize) -> bool;

    // --- SafeHex (3 functions) ---

    /// Hex encode bytes to string.
    pub fn proven_hex_encode(ptr: *const u8, len: usize, uppercase: bool) -> StringResult;

    /// Hex decode string to bytes.
    pub fn proven_hex_decode(ptr: *const u8, len: usize) -> HexDecodeResult;

    /// Free hex decode result.
    pub fn proven_hex_free(result: *mut HexDecodeResult);

    // --- SafeCurrency (2 functions) ---

    /// Parse currency amount.
    pub fn proven_currency_parse(ptr: *const u8, len: usize) -> CurrencyResult;

    /// Format currency amount.
    pub fn proven_currency_format(
        amount_minor: i64,
        code: [u8; 3],
        decimal_places: u8,
    ) -> StringResult;

    // --- SafePhone (2 functions) ---

    /// Parse phone number.
    pub fn proven_phone_parse(ptr: *const u8, len: usize) -> PhoneResult;

    /// Format phone number as E.164.
    pub fn proven_phone_format_e164(country_code: u16, national_number: u64) -> StringResult;

    // --- SafeVersion (3 functions) ---

    /// Parse semantic version string.
    pub fn proven_version_parse(ptr: *const u8, len: usize) -> VersionResult;

    /// Compare two semantic versions.
    pub fn proven_version_compare(a: SemanticVersion, b: SemanticVersion) -> i32;

    /// Free version result.
    pub fn proven_version_free(version: *mut SemanticVersion);

    // --- SafeGeo (3 functions) ---

    /// Validate geographic coordinate.
    pub fn proven_geo_validate(lat: f64, lon: f64) -> GeoResult;

    /// Calculate Haversine distance (meters).
    pub fn proven_geo_distance(a: GeoCoordinate, b: GeoCoordinate) -> FloatResult;

    /// Check if coordinate is in bounding box.
    pub fn proven_geo_in_bounds(
        coord: GeoCoordinate,
        min_lat: f64,
        max_lat: f64,
        min_lon: f64,
        max_lon: f64,
    ) -> bool;

    // --- SafeChecksum (2 functions) ---

    /// Calculate CRC32.
    pub fn proven_checksum_crc32(ptr: *const u8, len: usize) -> IntResult;

    /// Verify CRC32 matches expected.
    pub fn proven_checksum_verify_crc32(
        ptr: *const u8,
        len: usize,
        expected: u32,
    ) -> BoolResult;

    // --- SafeProbability (4 functions) ---

    /// Create probability (clamped to [0,1]).
    pub fn proven_probability_create(value: f64) -> f64;

    /// Multiply probabilities (independent events).
    pub fn proven_probability_and(a: f64, b: f64) -> f64;

    /// Add probabilities (mutually exclusive events).
    pub fn proven_probability_or_exclusive(a: f64, b: f64) -> f64;

    /// Complement.
    pub fn proven_probability_not(p: f64) -> f64;

    // --- SafeCalculator (1 function) ---

    /// Evaluate expression.
    pub fn proven_calculator_eval(ptr: *const u8, len: usize) -> FloatResult;

    // --- SafeBuffer (4 functions) ---

    /// Create bounded buffer.
    pub fn proven_buffer_create(capacity: usize) -> BufferResult;
